# netshow

./: .gitignore  LICENSE  README.md  helpers.py  netshow.py  pyproject.toml  styles.py
.github/workflows/: python-app.yml
src/netshow/: __init__.py  app.py  cli.py  detail_screen.py  helpers.py  styles.py  types_and_constants.py
tests/: __init__.py  test_helpers.py
